# Furrsol_simpleStaking_contract

./: Anchor.toml  package.json
migrations/: deploy.ts
programs/furrsol-extra-staking/: Cargo.toml
programs/furrsol-extra-staking/src/: lib.rs
tests/: furrsol-extra-staking.ts
